--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,13 @@ language: cpp
 sudo: required
 before_script:
   - ls
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+  - sudo apt-get update -y
+  - sudo apt-get install g++-7 -y
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 90
+  - gcc --version
+  - g++ --version
+  - cmake --version
 script:
   - cmake .
   - cmake --build .
